frontend/test/should_pass/exec_010.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    return (y);
    exec(   b:boolean =  ((c:B)=r(y))    );
    exec(   b:boolean = (((c:B)=r(y)))   );
    exec( ( b:boolean =  ((c:B)=r(y))  ) );
    exec( ( b:boolean = (((c:B)=r(y))) ) );
  }
}
