frontend/test/should_fail/exec_025.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    exec( b:boolean = ((c:B)=r(b)) );
    return (y);
  }
}
